--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -387,7 +387,7 @@
 		
 		@article{beleznai_2006,
 		  title={Human tracking by fast mean shift mode seeking},
-		  author={Beleznai, C. and Fr{\\"u}hst{\\"u}ck, B. and Bischof, H.},
+		  author={Beleznai, C. and Fruhstuck, B. and Bischof, H.},
 		  journal={Journal of Multimedia},
 		  volume={1},
 		  number={1},
