more edits. removed pretty worm picture

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -322,6 +322,23 @@
 % Detection and Tracking schemes for multiple objects 
 %
 	
+
+
+
+	% Papers related to unsupervised detection and tracking
+
+
+
+		% that one Penn paper:
+
+		@inproceedings{fragkiadaki2011detection,
+		  title={Detection free tracking: Exploiting motion and topology for segmenting and tracking under entanglement},
+		  author={Fragkiadaki, K. and Shi, J.},
+		  booktitle={Computer Vision and Pattern Recognition (CVPR), 2011 IEEE Conference on},
+		  pages={2073--2080},
+		  year={2011},
+		  organization={IEEE}
+		}
 	
 	
 	% Blob tracking
